# planter

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml  init.sh  mongo_setup.sh  run.sh
example/: .env.development  Cargo.toml  mongo_setup.sh
example/src/: main.rs
examples/: disk.rs  docker-compose.yml  dynamic.rs
src/: generation.rs  lib.rs  main.rs
src/common/: mod.rs
src/execution/: mod.rs
src/seeding/: mod.rs
