[package]
authors = ["Luis Osta"]
description = """
Blazingly fast data generation & seeding for MongoDB
"""
edition = "2018"
name = "planter"
readme = 'README.md'
repository = "https://github.com/valencian-digital/planter"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.0.0"
rayon = "1.5"
