[package]
authors = ["Luis Osta <luisosta1999@gmail.com>"]
edition = "2018"
name = "example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongoseed = {git = "https://github.com/valencian-digital/mongoseed", branch = "main"}# from online repo
